--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://byztam.github.io/scheduler-reactjs",
   "name": "scheduler-reactjs",
   "version": "0.1.0",
   "private": true,
@@ -12,9 +13,16 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-router-scroll-top": "^0.2.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "axios": "^0.20.0",
+    "redux": "^4.0.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
