--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-scroll-top": "^0.2.1",
     "react-scripts": "3.4.3",
     "axios": "^0.20.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.1"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
