--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://byztam.github.io/scheduler-reactjs",
+  "homepage": "https://byztam.github.io/scheduler-reactjs",
   "name": "scheduler-reactjs",
   "version": "0.1.0",
   "private": true,
